[gd_scene load_steps=70 format=2]

[ext_resource path="res://Entities/Player/UI.gd" type="Script" id=1]
[ext_resource path="res://Entities/StateMachine.gd" type="Script" id=2]
[ext_resource path="res://Entities/Player/Player.gd" type="Script" id=3]
[ext_resource path="res://Entities/Player/States/jump.gd" type="Script" id=4]
[ext_resource path="res://Entities/Player/States/move.gd" type="Script" id=5]
[ext_resource path="res://Entities/Player/States/idle.gd" type="Script" id=6]
[ext_resource path="res://Entities/Player/States/fall.gd" type="Script" id=7]
[ext_resource path="res://Entities/Player/States/dash.gd" type="Script" id=8]
[ext_resource path="res://Entities/Player/States/float.gd" type="Script" id=9]
[ext_resource path="res://Entities/Player/States/ledge_grab.gd" type="Script" id=10]
[ext_resource path="res://Art/Player/playerCylinder.png" type="Texture2D" id=11]
[ext_resource path="res://Entities/Player/States/stone_air.gd" type="Script" id=12]
[ext_resource path="res://Entities/Player/States/stone_stand.gd" type="Script" id=13]
[ext_resource path="res://Entities/Player/States/stone_topple.gd" type="Script" id=14]
[ext_resource path="res://Entities/Player/States/stone_fallen.gd" type="Script" id=15]
[ext_resource path="res://Entities/Player/States/stone_ledge.gd" type="Script" id=16]
[ext_resource path="res://Entities/Player/States/get_up.gd" type="Script" id=17]
[ext_resource path="res://Entities/Player/States/skate.gd" type="Script" id=18]
[ext_resource path="res://Entities/Player/States/skate_jump.gd" type="Script" id=19]
[ext_resource path="res://Entities/Player/States/stone_leap.gd" type="Script" id=20]
[ext_resource path="res://Entities/Player/States/stone_skate.gd" type="Script" id=21]
[ext_resource path="res://Entities/Player/States/skate_fall.gd" type="Script" id=22]
[ext_resource path="res://Entities/Player/States/skate_dash.gd" type="Script" id=23]
[ext_resource path="res://Entities/Player/States/skate_float.gd" type="Script" id=24]
[ext_resource path="res://Audio/SFX/walk.mp3" type="AudioStream" id=25]
[ext_resource path="res://Audio/SFX/jump.mp3" type="AudioStream" id=26]
[ext_resource path="res://Audio/SFX/float.mp3" type="AudioStream" id=27]
[ext_resource path="res://Audio/SFX/land.mp3" type="AudioStream" id=28]
[ext_resource path="res://Audio/SFX/blast.mp3" type="AudioStream" id=29]
[ext_resource path="res://Audio/SFX/dash.mp3" type="AudioStream" id=30]
[ext_resource path="res://Audio/SFX/stone_topple.mp3" type="AudioStream" id=31]
[ext_resource path="res://Audio/SFX/ledge_grab.mp3" type="AudioStream" id=32]
[ext_resource path="res://Audio/SFX/skate.mp3" type="AudioStream" id=33]
[ext_resource path="res://Audio/SFX/turn_to_stone.mp3" type="AudioStream" id=34]
[ext_resource path="res://Audio/SFX/stone_land.mp3" type="AudioStream" id=35]
[ext_resource path="res://Audio/SFX/skate_land.mp3" type="AudioStream" id=36]
[ext_resource path="res://Audio/SFX/skate_stop.mp3" type="AudioStream" id=37]
[ext_resource path="res://Art/Player/explorer.png" type="Texture2D" id=38]
[ext_resource path="res://Art/Player/drop_shadow.png" type="Texture2D" id=39]

[sub_resource type="CylinderShape3D" id=1]
height = 2.5
radius = 0.345914

[sub_resource type="StandardMaterial3D" id=2]
albedo_color = Color( 1, 0.00392157, 0.00392157, 1 )

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 2 )
top_radius = 0.35
bottom_radius = 0.35
height = 3.0

[sub_resource type="Animation" id=24]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "dash-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 176 ]
}

[sub_resource type="Animation" id=5]
resource_name = "fall-D"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 104 ]
}

[sub_resource type="Animation" id=6]
resource_name = "float-D"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 136 ]
}

[sub_resource type="Animation" id=7]
resource_name = "get-up-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 514 ]
}

[sub_resource type="Animation" id=8]
resource_name = "idle-D"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=9]
resource_name = "idle-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=10]
resource_name = "jump-D"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 72 ]
}

[sub_resource type="Animation" id=11]
resource_name = "ledge-grab-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 536 ]
}

[sub_resource type="Animation" id=12]
resource_name = "long-jump-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 464 ]
}

[sub_resource type="Animation" id=13]
resource_name = "move-D"
length = 1.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=14]
resource_name = "skate-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 216 ]
}

[sub_resource type="Animation" id=15]
resource_name = "skate-dash-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 368 ]
}

[sub_resource type="Animation" id=16]
resource_name = "skate-fall-D"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 296 ]
}

[sub_resource type="Animation" id=17]
resource_name = "skate-float-D"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 328 ]
}

[sub_resource type="Animation" id=18]
resource_name = "skate-jump-D"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 264 ]
}

[sub_resource type="Animation" id=19]
resource_name = "stone-fallen-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 434 ]
}

[sub_resource type="Animation" id=20]
resource_name = "stone-idle-D"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 392 ]
}

[sub_resource type="Animation" id=21]
resource_name = "stone-idle-R"
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 1,
"values": [ 394 ]
}

[sub_resource type="Animation" id=22]
resource_name = "stone-topple-R"
length = 0.8
step = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.4 ),
"transitions": PackedFloat32Array( 1, 1 ),
"update": 1,
"values": [ 408, 410 ]
}

[sub_resource type="Animation" id=23]
resource_name = "walk-D"

[sub_resource type="StyleBoxFlat" id=32]
bg_color = Color( 0.372549, 0.372549, 0.372549, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=31]
bg_color = Color( 0.368627, 0.368627, 0.368627, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="BoxMesh" id=27]

[sub_resource type="PrismMesh" id=28]

[sub_resource type="BoxMesh" id=29]

[sub_resource type="PrismMesh" id=30]

[node name="Player" type="CharacterBody3D"]
collision_layer = 17
collision_mask = 17
script = ExtResource( 3 )

[node name="Sounds" type="Node" parent="."]

[node name="blast_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 29 )
volume_db = -15.0
bus = "SFX"

[node name="moving_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 25 )
volume_db = 1.0
autoplay = true
bus = "SFX"

[node name="jump_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 26 )
bus = "SFX"

[node name="float_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 27 )
volume_db = -5.0
bus = "SFX"

[node name="land_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 28 )
volume_db = 5.0
bus = "SFX"

[node name="dash_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 30 )
volume_db = -0.5
bus = "SFX"

[node name="ledge_grab_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 32 )
volume_db = -0.5
bus = "SFX"

[node name="skate_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 33 )
bus = "SFX"

[node name="skate_stop_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 37 )
bus = "SFX"

[node name="skate_land_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 36 )
bus = "SFX"

[node name="stone_topple_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 31 )
bus = "SFX"

[node name="stone_turn_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 34 )
volume_db = 5.0
bus = "SFX"

[node name="stone_land_sound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource( 35 )
bus = "SFX"

[node name="States" type="Node" parent="."]
script = ExtResource( 2 )

[node name="idle" type="Node" parent="States"]
script = ExtResource( 6 )

[node name="move" type="Node" parent="States"]
script = ExtResource( 5 )

[node name="jump" type="Node" parent="States"]
script = ExtResource( 4 )

[node name="fall" type="Node" parent="States"]
script = ExtResource( 7 )

[node name="dash" type="Node" parent="States"]
script = ExtResource( 8 )

[node name="float" type="Node" parent="States"]
script = ExtResource( 9 )

[node name="ledge_grab" type="Node" parent="States"]
script = ExtResource( 10 )

[node name="skate" type="Node" parent="States"]
script = ExtResource( 18 )

[node name="skate_jump" type="Node" parent="States"]
script = ExtResource( 19 )

[node name="skate_fall" type="Node" parent="States"]
script = ExtResource( 22 )

[node name="skate_dash" type="Node" parent="States"]
script = ExtResource( 23 )

[node name="skate_float" type="Node" parent="States"]
script = ExtResource( 24 )

[node name="stone_stand" type="Node" parent="States"]
script = ExtResource( 13 )

[node name="stone_air" type="Node" parent="States"]
script = ExtResource( 12 )

[node name="stone_topple" type="Node" parent="States"]
script = ExtResource( 14 )

[node name="stone_fallen" type="Node" parent="States"]
script = ExtResource( 15 )

[node name="stone_ledge" type="Node" parent="States"]
script = ExtResource( 16 )

[node name="stone_skate" type="Node" parent="States"]
script = ExtResource( 21 )

[node name="stone_leap" type="Node" parent="States"]
script = ExtResource( 20 )

[node name="get_up" type="Node" parent="States"]
script = ExtResource( 17 )

[node name="Cooldowns" type="Node3D" parent="."]

[node name="Dash" type="Timer" parent="Cooldowns"]
wait_time = 0.25
one_shot = true

[node name="Stone" type="Timer" parent="Cooldowns"]
one_shot = true

[node name="Blast" type="Timer" parent="Cooldowns"]
wait_time = 0.25
one_shot = true

[node name="GroundCasts" type="Node3D" parent="."]

[node name="GroundCastFront" type="RayCast3D" parent="GroundCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0.34 )
visible = false
enabled = true
target_position = Vector3( 0, -1.1, 0 )

[node name="GroundCastFR" type="RayCast3D" parent="GroundCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.24, 1, 0.24 )
enabled = true
target_position = Vector3( 0, -1.1, 0 )

[node name="GroundCastRight" type="RayCast3D" parent="GroundCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.34, 1, 0 )
enabled = true
target_position = Vector3( 0, -1.1, 0 )

[node name="GroundCastBR" type="RayCast3D" parent="GroundCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.24, 1, -0.24 )
enabled = true
target_position = Vector3( 0, -1.1, 0 )

[node name="GroundCastBack" type="RayCast3D" parent="GroundCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.34 )
enabled = true
target_position = Vector3( 0, -1.1, 0 )

[node name="GroundCastBL" type="RayCast3D" parent="GroundCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.24, 1, -0.24 )
enabled = true
target_position = Vector3( 0, -1.1, 0 )

[node name="GroundCastLeft" type="RayCast3D" parent="GroundCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.34, 1, 0 )
enabled = true
target_position = Vector3( 0, -1.1, 0 )

[node name="GroundCastFL" type="RayCast3D" parent="GroundCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.24, 1, 0.24 )
enabled = true
target_position = Vector3( 0, -1.1, 0 )

[node name="WallCasts" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.05, 0 )

[node name="Wall_L" type="RayCast3D" parent="WallCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
enabled = true
target_position = Vector3( 0.5, 0, 0 )

[node name="Wall_R" type="RayCast3D" parent="WallCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
enabled = true
target_position = Vector3( -0.5, 0, 0 )

[node name="Wall_U" type="RayCast3D" parent="WallCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
enabled = true
target_position = Vector3( 0, 0, -0.5 )

[node name="Wall_D" type="RayCast3D" parent="WallCasts"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
enabled = true
target_position = Vector3( 0, 0, 0.5 )

[node name="Aimcast" type="Node3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.0146091 )

[node name="RayCast3D" type="RayCast3D" parent="Aimcast"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.9115, 1.33449 )
enabled = true
target_position = Vector3( 0, 0, 100 )

[node name="LedgeCasts_High" type="Node3D" parent="."]

[node name="High_L" type="RayCast3D" parent="LedgeCasts_High"]
transform = Transform3D( 0.706118, -5.86568e-11, 0.708093, 5.33601e-11, 1, 2.96257e-11, -0.708093, 1.68629e-11, 0.706118, 0.25, 2.9, 0.25 )
enabled = true
target_position = Vector3( 0, 0, 0.25 )

[node name="High_M" type="RayCast3D" parent="LedgeCasts_High"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.9, 0.25 )
enabled = true
target_position = Vector3( 0, 0, 0.25 )

[node name="High_R" type="RayCast3D" parent="LedgeCasts_High"]
transform = Transform3D( 0.707106, 0, -0.707107, 0, 1, 0, 0.707107, 0, 0.707106, -0.25, 2.9, 0.25 )
enabled = true
target_position = Vector3( 0, 0, 0.25 )

[node name="LedgeCasts_Low" type="Node3D" parent="."]

[node name="Low_L" type="RayCast3D" parent="LedgeCasts_Low"]
transform = Transform3D( 0.707106, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707106, 0.25, 2.5, 0.25 )
enabled = true
target_position = Vector3( 0, 0, 0.25 )

[node name="Low_M" type="RayCast3D" parent="LedgeCasts_Low"]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.5, 0.25 )
enabled = true
target_position = Vector3( 0, 0, 0.25 )

[node name="Low_R" type="RayCast3D" parent="LedgeCasts_Low"]
transform = Transform3D( 0.708959, 0.00185157, -0.705246, -0.00149519, 0.999998, 0.00112236, 0.705247, 0.000258802, 0.708961, -0.25, 2.5, 0.25 )
enabled = true
target_position = Vector3( 0, 0, 0.25 )

[node name="MainCollision" type="CollisionShape3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.75, 0 )
shape = SubResource( 1 )

[node name="CSGMesh3D" type="CSGMesh3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
visible = false
mesh = SubResource( 3 )

[node name="ExplorerSprite" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.016, 1.437, 0 )
pixel_size = 0.0625
billboard = 1
alpha_cut = 2
texture = ExtResource( 38 )
hframes = 8
vframes = 69

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../ExplorerSprite")
anims/RESET = SubResource( 24 )
anims/dash-R = SubResource( 4 )
anims/fall-D = SubResource( 5 )
anims/float-D = SubResource( 6 )
anims/get-up-R = SubResource( 7 )
anims/idle-D = SubResource( 8 )
anims/idle-R = SubResource( 9 )
anims/jump-D = SubResource( 10 )
anims/ledge-grab-R = SubResource( 11 )
anims/long-jump-R = SubResource( 12 )
anims/move-D = SubResource( 13 )
anims/skate-R = SubResource( 14 )
anims/skate-dash-R = SubResource( 15 )
anims/skate-fall-D = SubResource( 16 )
anims/skate-float-D = SubResource( 17 )
anims/skate-jump-D = SubResource( 18 )
anims/stone-fallen-R = SubResource( 19 )
anims/stone-idle-D = SubResource( 20 )
anims/stone-idle-R = SubResource( 21 )
anims/stone-topple-R = SubResource( 22 )
anims/walk-D = SubResource( 23 )

[node name="CylinderSprite" type="Sprite3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.016, 0.95, 0 )
visible = false
pixel_size = 0.0625
billboard = 1
texture = ExtResource( 11 )

[node name="UI" type="Control" parent="."]
process_mode = 2
offset_right = 155.0
offset_bottom = 33.0
scale = Vector2( 3, 3 )
script = ExtResource( 1 )

[node name="Button" type="Button" parent="UI"]
offset_left = 16.0
offset_top = 7.0
offset_right = 130.0
offset_bottom = 27.0
theme_override_styles/pressed = SubResource( 32 )
theme_override_styles/normal = SubResource( 31 )

[node name="HealthBar1" type="CollisionPolygon2D" parent="UI"]
position = Vector2( -12, 0 )
polygon = PackedVector2Array( 30, 12, 30, 22, 65, 22, 56, 12 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="UI/HealthBar1"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 43, 17 )
scale = Vector2( 13, 5 )
mesh = SubResource( 27 )

[node name="MeshInstance2D2" type="MeshInstance2D" parent="UI/HealthBar1"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 58.4704, 19.5296 )
rotation = 0.785398
scale = Vector2( 7.10547, 3.54261 )
mesh = SubResource( 28 )

[node name="HealthBar2" type="CollisionPolygon2D" parent="UI"]
polygon = PackedVector2Array( 50, 12, 58, 22, 95, 22, 86, 12 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="UI/HealthBar2"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 72, 17 )
scale = Vector2( 14, 5 )
mesh = SubResource( 29 )

[node name="MeshInstance2D2" type="MeshInstance2D" parent="UI/HealthBar2"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 88.4756, 19.5183 )
rotation = 0.785398
scale = Vector2( -7.04622, 3.53376 )
mesh = SubResource( 30 )

[node name="MeshInstance2D3" type="MeshInstance2D" parent="UI/HealthBar2"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 55.586, 14.4917 )
rotation = 0.785398
scale = Vector2( 7.10093, -3.56007 )
mesh = SubResource( 30 )

[node name="HealthBar3" type="CollisionPolygon2D" parent="UI"]
position = Vector2( 156, 34 )
rotation = 3.14159
polygon = PackedVector2Array( 30, 12, 30, 22, 65, 22, 56, 12 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="UI/HealthBar3"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 43, 17 )
scale = Vector2( 13, 5 )
mesh = SubResource( 27 )

[node name="MeshInstance2D2" type="MeshInstance2D" parent="UI/HealthBar3"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( 58.4704, 19.5296 )
rotation = 0.785398
scale = Vector2( 7.10547, 3.54261 )
mesh = SubResource( 28 )

[node name="DropShadowCast" type="RayCast3D" parent="."]
transform = Transform3D( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
enabled = true
target_position = Vector3( 0, -20, 0 )

[node name="DropShadow" type="Sprite3D" parent="DropShadowCast"]
transform = Transform3D( 1, 0, 0, 0, -9.28867e-08, -1, 0, 2.125, -4.37114e-08, 0, -0.99, 0 )
pixel_size = 0.0625
texture = ExtResource( 39 )

[connection signal="timeout" from="Cooldowns/Dash" to="." method="_on_Dash_timeout"]
[connection signal="timeout" from="Cooldowns/Stone" to="." method="_on_Stone_timeout"]
[connection signal="timeout" from="Cooldowns/Blast" to="." method="_on_Blast_timeout"]
